src/app/styles/core.scss
.bg-red {
  background-color: red !important;
}

html, body {
  height: 100%;
  font-family: Arial, Helvetica, sans-serif;
  background-color: white;
}

.selected-timing {
  background-color: #4b4848;
  color: white;
}


.b-1px-black {
  border: 1px solid black;
}

.highlighted-word{
  background-color: grey;
  @extend .px-1 !optional;
  @extend .py-1 !optional;
}

.wrong-word{
  background-color: red;
  @extend .px-1 !optional;
  @extend .py-1 !optional;
}

